--- a/4.md
+++ b/4.md
@@ -62,39 +62,6 @@ The Minkowski Sum of `A + (-B)` is often called the **Minkowski Difference**. Th
 
 Equally useful is the fact that the the distance from the origin to the closest point on the Minkowski Difference of two shapes is always equal to the **shortest distance between the two shapes.**
 
-Woah that's a lot to suddenly drop in there without any explanation. Let's do an example to test all of this theory. Here are two shapes that overlap.
+Woah that's a lot to suddenly drop in there without any explanation. Let's do an example to test all of this theory. 
 
-![](img/minkowski_overlapping_1.png)
-
-So step 1, negate one of them.
-
-![](img/minkowski_overlapping_2.png)
-
-Step 2, take the origin of one, and sweep it around inside of the other.
-
-![](img/minkowski_overlapping_3.png)
-
-Step 3, does it overlap the origin? Yes!
-
-
-Cool, now another example. This time they don't overlap. 
-
-![](img/minkowski_not_overlapping_1.png)
-
-We repeat the steps. Negate the box..
-
-![](img/minkowski_not_overlapping_2.png)
-
-Take the origin of the circle, swish it around inside the box to cover every possible point in the box..
-
-![](img/minkowski_not_overlapping_3.png)
-
-..and check the origin. Overlap? No! And better yet, Check the closest point on the swept shape to the origin. What do you see? 
-
-![](img/minkowski_not_overlapping_4.png)
-
-Well well well, what a coincidence. It seems to be telling us the distance between the two objects at their closest points. Damn this Minkowski stuff is cool.
-
-Alright cool, I've explained the principle. Shape addition is a very useful and powerful idea. You'll see it hard at work inside the GJK (Gilbert/Johnson/Keerthi) algorithm if you want general-purpose convex polygon collision detection. But that's beyond what I'm prepared to type up today, so let's get back on track..
-
-NEXT [Circle vs AABB Swept Collision](5.md)
+[To The Example..](4-1.md)
