added a section on timing

--- a/3.md
+++ b/3.md
@@ -75,4 +75,4 @@ Second of all, it's as accurate as you want to make it! You choose the minimum t
 
 Sounds awesome right? Nothing could be better, right? It's got an algorithm in it and everything! Well then..
 
-NEXT: [Minkowski Shennanigans](4.md)
+NEXT: [Collision Ordering](3-1.md)
