--- a/3-1.md
+++ b/3-1.md
@@ -48,7 +48,7 @@ Let's say we just break out of the loop if we detect a collision. That's an impr
 
 ![](img/ordering_5.png)
 
-If we just break the loop when a collision is found, then this situation will generate a hit on the center block while *allowing the ball to tunnel completely through* the right-side block.
+If we just break the loop when a collision is found, then this situation will generate a hit on the center block while *allowing the ball to tunnel completely through* the right-side block **without ever checking it!**
 
 #### The Ultimate Problem
 
