--- a/3-1.md
+++ b/3-1.md
@@ -113,4 +113,6 @@ if(bestTime < INFINITY)
 }
 ```
 
+The second, more robust solution, is to accept the first collision and then *redo every single collision check*. This is necessary in the case where our ball was going to *miss* a given object, but then **bounced off of something else and flew into it anyways**. I won't cover this solution in detail, but hopefully you can see how you'd do it!
+
 NEXT: [Minkowski Shennanigans](4.md)
